# IntentRecognizer

./: .clang-format  CMakeLists.txt  build_and_run_executable.sh  build_and_run_tests.sh  challenges_IntentRecognizer.md  main_run_after_build.sh  readme.md  test_run_after_build.sh
include/: are_words_similar.h  main.h  recognize_intent.h
src/: are_words_similar.cpp  main.cpp  recognize_intent.cpp
tests/: are_words_similar_tests.cpp  recognize_intent_tests.cpp
